# ManualCNC

./: .gitignore  CMakeLists.txt  README.md
Working/Example/: Example.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Working/Example/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Working/smc5dlib_test1/: main.cpp  resource.h  smc5dlib_test1.aps  smc5dlib_test1.sln  smc5dlib_test1.vcxproj  smc5dlib_test1.vcxproj.filters
Working/smc5dlib_test1/x64/Debug/: smc5dlib_test1.assets.cache  smc5dlib_test1.deps.json  smc5dlib_test1.dll.recipe  smc5dlib_test1.genruntimeconfig.cache  smc5dlib_test1.vcxproj.AssemblyReference.cache  smc5dlib_test1.vcxproj.FileListAbsolute.txt  smc5dlib_test3_cpp.exe.metagen
Working/smc5dlib_test2_csharp/: Program.cs  smc5dlib_test2_csharp.csproj
Working/smc5dlib_test3_cpp/: AssemblyInfo.cpp  circle.dxf  circle.dxf~  circle.grf4  circle.grf5  circle.nc  config.xml  config_Haase1290Expert.xml  iso.dxf  iso.grf5  job_controller.cpp  job_controller.h  moon.dxf  moon.dxf~  moon.grf4  pch.h  polyline.dxf  polyline.dxf~  polyline.grf4  smc5d.core.tlb  smc5dlib_test3_cpp.cpp  smc5dlib_test3_cpp.vcxproj  smc5dlib_test3_cpp.vcxproj.filters  spiral.dxf  spiral.grf4  step_io.cpp  step_io.h
Working/smc5dlib_test3_cpp/x64/Debug/: smc5d.core.tlh  smc5dlib_test3_cpp.exe.metagen  smc5dlib_test3_cpp.exe.recipe  smc5dlib_test3_cpp.vcxproj.AssemblyReference.cache  smc5dlib_test3_cpp.vcxproj.FileListAbsolute.txt
doc/: smc5d.core.chm  smc5d.core.chw
include/: pch.h  smc5d.core.tlh
src/: AssemblyInfo.cpp  main.cpp
(+47 files in other folders)
